WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217698
Enabling IPC testing API should prevent the termination of WebContent process which sends an invalid IPC
https://bugs.webkit.org/show_bug.cgi?id=217698
Summary
Enabling IPC testing API should prevent the termination of WebContent process...
Ryosuke Niwa
Reported
2020-10-14 01:51:54 PDT
For effective testing, we should keep Web process alive when it sends an invalid message to UI process.
Attachments
Patch
(10.58 KB, patch)
2020-10-14 02:03 PDT
,
Ryosuke Niwa
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2020-10-14 02:00:43 PDT
<
rdar://problem/70123245
>
Ryosuke Niwa
Comment 2
2020-10-14 02:03:36 PDT
Created
attachment 411307
[details]
Patch
Geoffrey Garen
Comment 3
2020-10-14 13:36:46 PDT
Comment on
attachment 411307
[details]
Patch r=me
Ryosuke Niwa
Comment 4
2020-10-14 16:14:57 PDT
Committed
r268497
: <
https://trac.webkit.org/changeset/268497
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug